# ac_int_oneapi

./: Makefile  README.md  build.sh  test.cpp
include/: clz.hpp  data.hpp  utils.hpp
src/: clz_bench.cpp  clz_test.cpp
tvl/: CMakeLists.txt
tvl/include/: tvlintrin.hpp
tvl/include/static/: tvl_static.hpp
tvl/include/static/simd/: simd_primitive_concepts.hpp  simd_type.hpp  simd_type_concepts.hpp
tvl/include/static/utils/: preprocessor.hpp  type_concepts.hpp  type_helper.hpp
tvl/src/test/: CMakeLists.txt  test_functions.hpp  unit_test.cpp
